--- a/package.json
+++ b/package.json
@@ -43,5 +43,5 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.1.5"
   },
-  "homepage": "https://github.com/perlov3301/perlov3301.github.io/skilled-ui-interview"
+  "homepage": "https://perlov3301.github.io/skilled-ui-interview"
 }
